# ChampMail

./: .env.example  .gitignore  ChampMail Simplification Plan.md  DEPLOYMENT_CHECKLIST.md  RALPH-LOOP.md  README.md  champions-email-engine-prd.docx  champmail-simplification-prd.md.resolved  code-simplifier.skill  docker-compose.yml  expansion_plan.md.resolved  implementation_plan.md.resolved  railway.toml  render.yaml  test-champmail.sh
backend/: .dockerignore  Dockerfile  README.md  TESTING.md  alembic.ini  pyproject.toml  railway.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_user_tables.py  002_domains_tables.py  003_email_accounts_table.py  004_send_logs_table.py  005_data_team_and_lists.py  006_campaign_tracking_tables.py  007_utm_tracking_tables.py  008_add_user_job_title.py  009_add_campaign_send_mode.py
backend/app/: celery_app.py  main.py
backend/app/core/: admin_security.py  config.py  security.py
backend/app/db/: falkordb.py  postgres.py  redis.py
backend/app/middleware/: __init__.py  rate_limit.py
backend/app/models/: __init__.py  campaign.py  domain.py  email_account.py  email_settings.py  send_log.py  sequence.py  user.py  utm.py  workflow.py
backend/app/schemas/: c1.py  prospect.py  sequence.py
backend/app/scripts/: seed_graph.py
backend/app/services/: analytics_service.py  audit_service.py  campaign_pipeline.py  campaign_send_service.py  campaigns.py  cloudflare_client.py  domain_rotation.py  domain_service.py  (+17 more)
backend/scripts/: migrate.py  start.py
backend/tests/: conftest.py  run_tests.py
(+171 files in other folders)
